--- a/app/views/user_mailer/account_suspended.html.erb
+++ b/app/views/user_mailer/account_suspended.html.erb
@@ -1,5 +1,11 @@
-<p style="margin: 0 0 16px; color: #334155;">Hi <%= @user.name.presence || @user.email %>,</p>
+<h1 style="margin: 0 0 20px 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 28px; font-weight: 600; line-height: 36px; color: #000000;">
+  Hi <%= recipient_first_name %>,
+</h1>
 
-<p style="margin: 0 0 16px; color: #334155;">Your Feedback Page account has been suspended. You will not be able to sign in until your account is reactivated.</p>
+<p style="margin: 0 0 16px 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color: #374151;">
+  Your Feedback Page account has been suspended. You will not be able to sign in until your account is reactivated.
+</p>
 
-<p style="margin: 0; color: #334155;">If you believe this was done in error, please contact support.</p>
+<p style="margin: 24px 0 0 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color: #374151;">
+  If you believe this was done in error, please contact support.
+</p>
