--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -5,15 +5,20 @@
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="x-apple-disable-message-reformatting">
+  <meta name="color-scheme" content="light only">
+  <meta name="supported-color-schemes" content="light">
   <title>feedback PAGE</title>
   <style>
+    :root { color-scheme: light only; supported-color-schemes: light; }
     html,
     body {
       margin: 0 auto !important;
       padding: 0 !important;
       height: 100% !important;
       width: 100% !important;
-      background: #ffffff;
+      background: #ffffff !important;
+      background-color: #ffffff !important;
+      color: #111827 !important;
     }
     * {
       -ms-text-size-adjust: 100%;
@@ -38,7 +43,7 @@
     }
   </style>
 </head>
-<body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly; background-color: #ffffff;">
+<body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly; background-color: #ffffff !important; color: #111827 !important;">
   <center style="width: 100%; background-color: #ffffff;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
       <tr>
@@ -61,7 +66,7 @@
                 <!-- Main Content -->
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td style="padding: 40px 40px 40px 40px;">
+                    <td style="padding: 40px 40px 40px 40px; background-color: #ffffff !important; color: #111827 !important;">
                       <%= yield %>
                     </td>
                   </tr>
